-
Bug
-
Resolution: Fixed
-
P4: Low
-
6.7
-
None
-
-
a0a29695a (dev), 8ef3ff1c6 (6.6), 7c4e271fe (dev), 9962441bf (6.7), f0e4f50fd (6.6)
Compiling and running the attached code with thread sanitizer leads to a failure in the forkfd repository.
ThreadSanitizer: CHECK failed: tsan_rtl.cpp:250 "((!thr->slot)) != (0)" (0x0, 0x0) (tid=213749) #0 __tsan::CheckUnwind() /usr/src/debug/gcc/gcc/libsanitizer/tsan/tsan_rtl.cpp:672 (libtsan.so.2+0x96228) (BuildId: 7e8fcb9ed0a63b98f2293e37c92ac955413efd9e) #1 __sanitizer::CheckFailed(char const*, int, char const*, unsigned long long, unsigned long long) /usr/src/debug/gcc/gcc/libsanitizer/sanitizer_common/sanitizer_termination.cpp:86 (libtsan.so.2+0xd2500) (BuildId: 7e8fcb9ed0a63b98f2293e37c92ac955413efd9e) #2 FindSlotAndLock /usr/src/debug/gcc/gcc/libsanitizer/tsan/tsan_rtl.cpp:250 (libtsan.so.2+0x97fee) (BuildId: 7e8fcb9ed0a63b98f2293e37c92ac955413efd9e) #3 __tsan::SlotAttachAndLock(__tsan::ThreadState*) /usr/src/debug/gcc/gcc/libsanitizer/tsan/tsan_rtl.cpp:293 (libtsan.so.2+0x97fee) #4 ForkAfter /usr/src/debug/gcc/gcc/libsanitizer/tsan/tsan_rtl.cpp:840 (libtsan.so.2+0x98330) (BuildId: 7e8fcb9ed0a63b98f2293e37c92ac955413efd9e) #5 clone /usr/src/debug/gcc/gcc/libsanitizer/tsan/tsan_interceptors_posix.cpp:2274 (libtsan.so.2+0x48bbf) (BuildId: 7e8fcb9ed0a63b98f2293e37c92ac955413efd9e) #6 system_vforkfd(int, int*, int (*)(void*), void*, int*) /home/jonas/Code/qt-dev/qtbase/src/corelib/../3rdparty/forkfd/forkfd_linux.c:172 (libQt6Core.so.6+0x90edcb) (BuildId: b4b6edc9cc90d01534d824173b62af353a4aacf9) #7 vforkfd /home/jonas/Code/qt-dev/qtbase/src/corelib/io/../../3rdparty/forkfd/forkfd.c:814 (libQt6Core.so.6+0x90eb84) (BuildId: b4b6edc9cc90d01534d824173b62af353a4aacf9) #8 (anonymous namespace)::QChildProcess::startChild(int*) /home/jonas/Code/qt-dev/qtbase/src/corelib/io/qprocess_unix.cpp:324 (libQt6Core.so.6+0x8bbd9d) (BuildId: b4b6edc9cc90d01534d824173b62af353a4aacf9) #9 QProcessPrivate::startProcess() /home/jonas/Code/qt-dev/qtbase/src/corelib/io/qprocess_unix.cpp:699 (libQt6Core.so.6+0x8bb1e3) (BuildId: b4b6edc9cc90d01534d824173b62af353a4aacf9) #10 QProcessPrivate::start(QFlags<QIODeviceBase::OpenModeFlag>) /home/jonas/Code/qt-dev/qtbase/src/corelib/io/qprocess.cpp:2402 (libQt6Core.so.6+0x8a4e83) (BuildId: b4b6edc9cc90d01534d824173b62af353a4aacf9) #11 QProcess::start(QString const&, QList<QString> const&, QFlags<QIODeviceBase::OpenModeFlag>) /home/jonas/Code/qt-dev/qtbase/src/corelib/io/qprocess.cpp:2210 (libQt6Core.so.6+0x8a48f4) (BuildId: b4b6edc9cc90d01534d824173b62af353a4aacf9) #12 main /home/jonas/Code/untitled7/main.cpp:8 (untitled7+0x1317) (BuildId: c3716d93bfc93235d636ca68d90a425e540c2203) #13 <null> <null> (libc.so.6+0x27ccf) (BuildId: 8bfe03f6bf9b6a6e2591babd0bbc266837d8f658) #14 __libc_start_main <null> (libc.so.6+0x27d89) (BuildId: 8bfe03f6bf9b6a6e2591babd0bbc266837d8f658) #15 _start <null> (untitled7+0x1194) (BuildId: c3716d93bfc93235d636ca68d90a425e540c2203)
- relates to
-
QTBUG-119488 Compilation error when building Qt 6.5.3 with thread sanitizer
-
- Reported
-
- resulted from
-
QTBUG-104493 Application performance drops if many threads are running while QProcess creates sub-processes on Unix
-
- Closed
-
| For Gerrit Dashboard: QTBUG-117533 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 515500,2 | WIP: HACK: use popen for tsan | dev | qt/qtshadertools | Status: ABANDONED | -2 | 0 |
| 515679,2 | QProcess/Unix: also ban vfork() under TSan | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 515740,5 | QProcess/Unix: detect ASan and TSan dynamically | dev | qt/qtbase | Status: MERGED | -1 | 0 |
| 515861,2 | QProcess/Unix: also ban vfork() under TSan | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 530598,2 | QProcess/Unix: detect ASan and TSan dynamically | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 530663,3 | QProcess/Unix: detect ASan and TSan dynamically | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |